--- a/spring-cloud-service-consumer-demo/src/main/resources/config/dev/application.properties
+++ b/spring-cloud-service-consumer-demo/src/main/resources/config/dev/application.properties
@@ -3,6 +3,11 @@ spring.application.name=consumer-demo
 server.port=9000
 eureka.client.serviceUrl.defaultZone = http://localhost:8000/eureka/
 
+eureka.instance.prefer-ip-address = true
 feign.hystrix.enabled=true
 
-eureka.instance.prefer-ip-address = true
+fa-account-api.ribbon.NFLoadBalancerClassName=com.netflix.loadbalancer.DynamicServerListLoadBalancer
+#ribbon ServerList的实现类
+fa-account-api.ribbon.NIWSServerListClassName=com.netflix.niws.loadbalancer.DiscoveryEnabledNIWSServerList
+#调用服务的VipAddress，与eureka.vipAddress的参数值对应
+fa-account-api.ribbon.DeploymentContextBasedVipAddresses=faAccountData
