--- a/spring-cloud-eureka-demo/pom.xml
+++ b/spring-cloud-eureka-demo/pom.xml
@@ -6,18 +6,16 @@
     <parent>
         <groupId>com.sh</groupId>
         <artifactId>spring-cloud-demo</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
 
     <artifactId>spring-cloud-eureka-demo</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>spring-cloud-eureka-demo</name>
     <description>Eureka project for Spring Boot</description>
-
-
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
 
         <dependency>
