--- a/spring-cloud-service-consumer-demo/src/main/resources/config/dev/application.properties
+++ b/spring-cloud-service-consumer-demo/src/main/resources/config/dev/application.properties
@@ -6,8 +6,21 @@ eureka.client.serviceUrl.defaultZone = http://localhost:8000/eureka/
 eureka.instance.prefer-ip-address = true
 feign.hystrix.enabled=true
 
-fa-account-api.ribbon.NFLoadBalancerClassName=com.netflix.loadbalancer.DynamicServerListLoadBalancer
-#ribbon ServerList的实现类
-fa-account-api.ribbon.NIWSServerListClassName=com.netflix.niws.loadbalancer.DiscoveryEnabledNIWSServerList
-#调用服务的VipAddress，与eureka.vipAddress的参数值对应
-fa-account-api.ribbon.DeploymentContextBasedVipAddresses=faAccountData
+
+spring.main.allow-bean-definition-overriding=true
+
+ribbon.ReadTimeout : 50000
+ribbon.ConnectTimeout : 50000
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 10000
+
+
+
+
+
+
+
+
+
+
+
