--- a/spring-cloud-service-consumer-demo/src/main/resources/config/dev/application.properties
+++ b/spring-cloud-service-consumer-demo/src/main/resources/config/dev/application.properties
@@ -7,6 +7,8 @@ eureka.instance.prefer-ip-address = true
 feign.hystrix.enabled=true
 
 
+
+
 spring.main.allow-bean-definition-overriding=true
 
 ribbon.ReadTimeout : 50000
@@ -15,6 +17,10 @@ ribbon.ConnectTimeout : 50000
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 10000
 
 
+management.endpoints.enabled-by-default=true
+management.endpoints.web.exposure.include=*
+eureka.instance.statusPageUrlPath=/actuator/info
+eureka.instance.healthCheckUrlPath=/actuator/health
 
 
 
